--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "csv": "^6.1.0",
+    "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1"
+  },
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.17.0"
+  }
 }
